# typeskia

./: .editorconfig  .eslintignore  .gitignore  .gitmodules  .npmignore  .prettierignore  Cargo.toml  LICENSE  README.md  build.rs  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
lib/: .gitignore  CMakeLists.txt  Makefile
lib/src/: CMakeLists.txt  Makefile  typeskia.cpp  typeskia.h
lib/tests/: CMakeLists.txt  Makefile  main.cpp  tests.cpp
libs/skia-wrapper/: skia-wrapper.cpp  skia-wrapper.h
npm/darwin-arm64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
scripts/: build.js  clean.js  gn-args.js  helper.js
src/: lib.rs
tests/: tests.spec.ts
