[package]
name = "rust-textnote"
version = "0.1.0"
edition = "2021"
authors = ["Jimmy Moon <ragingwind@gmail.com>"]
build = "build.rs"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.7.0", default-features = false, features = ["napi4"] }
napi-derive = "2.7.0"

[build-dependencies]
napi-build = "2.0.1"